# stadtreinigung_hamburg

./: .gitignore  LICENSE  README.md  pub.key  public.key  pyproject.toml  setup.py
.github/workflows/: publish.yml
stadtreinigung_hamburg/: GarbageCollection.py  StadtreinigungHamburg.py  __main__.py  stadtreinigung_hamburg.py
