[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stadtreinigung_hamburg"
version = "0.3.1" # This will be replaced by the GitHub workflow
description = "A library to get garbage collection dates in Hamburg."
readme = "README.md"
authors = [{ name = "Tom Schneider", email = "tom@sutomaji.net" }]
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.8.0"
dependencies = [
    "requests_html",
    "argparse",
    "lxml-html-clean>=0.4.2",
    "dateparser>=1.2.2",
]

[project.urls]
Homepage = "https://github.com/vigonotion/stadtreinigung_hamburg"

[project.scripts]
stadtreinigung_hamburg = "stadtreinigung_hamburg.stadtreinigung_hamburg:main"
